<resources>
    <string name="app_name">BaDoli</string>
    <string name="google_maps_key" translatable="false">AIzaSyBZ3O59KED5Kl--znKyOHMuhkdLvMJwc6Y</string>
    <string name="edit_login">Phone No / Email Id</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="user_full_name">Full Name</string>
    <string name="user_phone_no">Phone No.</string>
    <string name="user_email_id">Email ID</string>
    <string name="terms_and_cond">I Read and agree to Terms and Conditions</string>
    <string name="aleardy_account">Already have an account ?</string>
    <string name="ed_fullName">Enter Full Name</string>
    <string name="ed_phone">Enter Phone No</string>
    <string name="phone_lenght">Phone Number should be between 7 to 15 digits</string>
    <string name="ed_email">Enter Email Id</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="ed_password">Enter Password</string>
    <string name="ed_confirm_password">Enter Confirm Password</string>
    <string name="invalid_password">Password Should have minimum 4 Characters</string>
    <string name="not_match">Password and Confirm Password not match.</string>
    <string name="check_term">Please Agree Terms and Conditions</string>
    <string name="remember_me">Remember Me</string>
    <string name="fgt_pwd">Forget Password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_signin">Sign In</string>
    <string name="login">Login</string>
    <string name="conf_pwd">Confirm Password</string>
    <string name="country_code">+91</string>
    <string name="free_to_contact">If facing any problem, feel free to contact us</string>
    <string name="close">Close</string>
    <string name="enter_otp">Enter OTP sent to your mobile number</string>
    <string name="next">Next</string>
    <string name="payez_merchant">Payment</string>
    <string name="transfer_agent">Transfer Agent</string>
    <string name="recharge_com">Count Refill</string>
    <string name="wallet">Wallet</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="chng_pwd">Change Password</string>
    <string name="logout">Logout</string>
    <string name="current_bal">Current Balance</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="transaction">Transactions</string>
    <string name="help">Help</string>
    <string name="request">Request</string>
    <string name="by_qr">By QR Code,Phone Number</string>
    <string name="pay_phone">Pay by Phone , ID</string>
    <string name="pay_qr">Pay By QR Code</string>
    <string name="pay_service">Payment Services</string>
    <string name="merch_id">Merchant ID</string>
    <string name="merch_mob">Merchant Mobile No</string>
    <string name="go_back">Go Back</string>
    <string name="favories">Favorits</string>
    <string name="qr_code">QR Code</string>
    <string name="mobile_id">Mobile/ID</string>
    <string name="enter_amt_gen_code">Please enter the amount and click on Generate Code.</string>
    <string name="amt_fcfa">(Amount) Fcfa</string>
    <string name="gen_code">Generate Code</string>
    <string name="qr_note">One generated code wll expire in 2 minutes</string>
    <string name="merchan_id">Merchant Id</string>
    <string name="star_hint">*</string>
    <string name="mob_number">Mobile  Number</string>
    <string name="hint_country_code">+241</string>
    <string name="hint_whatfor">What is it for?</string>
    <string name="progress">Progress</string>
    <string name="corporate">Corporate</string>
    <string name="user_profile">User Profile</string>
    <string name="user_name">User name</string>
    <string name="enter_username">Enter User Name</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_digit_mobile">Enter your 10 digit mobile number</string>
    <string name="dob">Date of Birth</string>
    <string name="dob_hint">DD/MM/YYYY</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="scan_code">Scan this Ba doli Code</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="to_pay">To Pay</string>
    <string name="amt_paid">Amount to be paid:</string>
    <string name="to_phone_number">To Phone Number</string>
    <string name="to_bank_account">To Bank Account</string>
    <string name="enter_reciever_mobile_acc">Enter Reciever\'s mobile Account Number</string>
    <string name="select_gsm_provider">Select a GSM Provider</string>
    <string name="money_transfer">Money Transfer Agent</string>
    <string name="select_account">Select a Account</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="choose_bank">Choose a Bank</string>
    <string name="name_beneficiary">Name Of The Beneficiary</string>
    <string name="branch_code">Branch Code</string>
    <string name="account_number">Account Number</string>
    <string name="rib_key">RIB Key</string>
    <string name="confirm">Confirm</string>
    <string name="enter_reciever_acc">Enter Reciever\'s Account Number</string>
    <string name="enter_valid_amount">Enter Valid Amount</string>
    <string name="enter_phone">Enter Mobile Number</string>
    <string name="enter_valid_phone">Enter Valid Mobile No</string>
    <string name="hint_amount">00</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="done">Done</string>
    <string name="successful_payment">Successful Payment</string>
    <string name="enter_amount_hint">Enter Amount (FCFA)</string>
    <string name="about_us">About Us</string>
    <string name="submit_request">Submit Request</string>
    <string name="change_pwd">Change Password</string>
    <string name="off">Flash Off</string>
    <string name="on">Flash On</string>
    <string name="scan_pay">Scan and Payment</string>
    <string name="proceed">Proceed</string>
    <string name="pin_hint">*</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="payment_detail">Payment Details</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="other_fees">Other Fees</string>
    <string name="amount">Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="transaction_successfull">Transaction Successful</string>
    <string name="reciept_no">Receipt No.</string>
    <string name="date_time">Date/Time</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="make_new_payment">Make New Payment</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="add_money_to_badoli">Add  Money to BadoliPay</string>
    <string name="select_option_to_add">Select an option to add money</string>
    <string name="enter_gabon_mobile">Enter the telephone number to be debited</string>
    <string name="airtel_money">Airtel Money</string>
    <string name="amount_should_100">The amount must be at least 100.</string>
    <string name="amount_should_499">The amount must be smaller than 49900</string>
    <string name="enter_mobile">Enter Mobile No.</string>
    <string name="badoli_balance">Badoli Balance:</string>
    <string name="enter_valide_mobile">Enter valid mobile no.</string>
    <string name="wallet_balance_low">Your wallet balance is low</string>
    <string name="amount_should_10">The amount must be 10.</string>
    <string name="merchant">Merchant</string>
    <string name="user">User</string>
    <string name="select_usertype">Select User Type</string>
    <string name="something_wrong">Something went wrong!! Try after sometime</string>
    <string name="invalid_code">Invalid code</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="enter_company_name">Company Name</string>
    <string name="enter_company_address">Company Address</string>
    <string name="enter_company_number">Company Registration Number</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_now">Go Back for Login</string>
    <string name="really_exit">Really Exit?</string>
    <string name="are_sure_exit">Are you sure you want to exit?</string>
    <string name="enter_otp_sent_mobile">Please enter otp sent to your mobile no.</string>
    <string name="no_internet">No Internet Connectivity</string>
    <string name="your_sector">Your Activity Sector</string>
    <string name="select_your_sector">Select your sector</string>
    <string name="perm_denied">Permission Denied</string>
    <string name="without_perm_not_allowed">Without those permission the app is unable to scan. App needs external storage and camera.Are you sure you want to deny this permission?</string>
    <string name="m_sure">I\'M SURE</string>
    <string name="retry">RE-TRY</string>
    <string name="new_request">New request</string>
    <string name="want_logout">Are you sure want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="code_expires_in">This code will expire in:</string>
    <string name="minutes">minutes</string>
    <string name="code_expired">This code is expired</string>
    <string name="camera_perm_allow">CAMERA permission allows us to Access CAMERA app</string>
    <string name="perm_cacelled">Permission Cancelled</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_gallery">Select From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="select_option">Select Option!</string>
    <string name="select_image">Select Image</string>
    <string name="camera_perm_error">Camera Permission error</string>
    <string name="paid">Paid</string>
    <string name="recieve">Received</string>
    <string name="chng_pwd_or_language">Change Password, Language</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="submit">Submit</string>
    <string name="contact_us_number">In case of problems, you can contact us at 123456789 or by email at contact@badolipay.com.</string>
    <string name="change_language">Change Language</string>
    <string name="english">English(en)</string>
    <string name="french">French(fr)</string>
    <string name="select_language">Select Language</string>
    <string name="enable_perm">Please enable permission!</string>
    <string name="select_activity_sector">Select your activity sector</string>
    <string name="paypal">PayPal</string>
    <string name="fr">Fr (French)</string>
    <string name="en">En (English)</string>
    <string name="particular">Particular</string>
    <string name="professional">Professional</string>
    <string name="please_wait">Please wait…</string>
    <string name="Phone_no_length">Phone number should be 07–15 digits long.</string>
    <string name="password_empty">Password can\'t be empty.</string>
    <string name="password_length">Password length should be 4 character long</string>
    <string name="phone_no_empty">Phone Number can\'t be empty.</string>
    <string name="new_password_empty">New password field cant\'t be empty.</string>
    <string name="confirm_password_empty">Confirm Password field cant\'t be empty.</string>
    <string name="password_does_not_match">New Password and confirm password are different.</string>
    <string name="enter_subject">Enter the Subject</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="plz_verify_your_details">Please verify your entered details before submitting</string>
</resources>