<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_toolbar_agent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/purple">

            <ImageView
                android:id="@+id/img_back_agent"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:padding="@dimen/_15sdp"
                android:background="@drawable/rl_back"
                android:src="@drawable/arrow_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_title_agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/img_back_agent"
                android:text="@string/money_transfer"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="bold"/>

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollview_agent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_banner_agent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:padding="@dimen/_6sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/banner"
                    tools:ignore="ContentDescription" />

                <RadioGroup
                    android:id="@+id/radiogroup_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/DP20"
                    android:background="@drawable/box_round_corner"
                    android:weightSum="1">

                    <RadioButton
                        android:id="@+id/rb_phone"
                        android:layout_width="match_parent"
                        android:layout_weight="0.50"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/_8sdp"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:checked="true"
                        android:textStyle="bold"
                        android:lines="2"
                        android:textSize="@dimen/_12ssp"
                        android:textSelectHandle="@drawable/radio_flat_text_selector"
                        android:background="@drawable/purple_round_left_layout"
                        android:text="@string/to_phone_number"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/rb_bank"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:padding="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:layout_weight="0.50"
                        android:checked="true"
                        android:lines="2"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:button="@android:color/transparent"
                        android:text="@string/to_bank_account"
                        android:textSelectHandle="@drawable/radio_flat_text_selector"
                        android:textColor="@color/text_orange" />

                </RadioGroup>

                <FrameLayout
                    android:id="@+id/framelayout_agent"
                    android:layout_width="match_parent"
                    android:isScrollContainer="true"
                    android:scrollbars="none"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>